k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydrus-backend-svc
  namespace: hydrus
spec:
  type: ClusterIP
  selector:
    app: hydrus-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: hydrus-frontend-svc
  namespace: hydrus
spec:
  type: ClusterIP
  selector:
    app: hydrus-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
